--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "edd71bb9",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "4a9430e4",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "b299b569",
    "metadata": {},
    "outputs": [],
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "f714a42e",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "6303b72e",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37/37 [==============================] - 1s 26ms/step\n",
+      "37/37 [==============================] - 3s 59ms/step\n",
       "1179\n"
      ]
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "24514fcc",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "id": "7901739f",
    "metadata": {},
    "outputs": [
@@ -852,12 +852,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[90, 1014, 527, 560, 230, 182, 1149, 981, 965, 447]\n"
+      "[22, 137, 541, 561, 375, 1087, 926, 16, 1092, 475]\n"
      ]
     }
    ],
    "source": [
     "samples = []\n",
+    "\n",
     "random_num = random.randrange(0, len(y_pred) + 1)\n",
     "\n",
     "for i in range(0, 10) :\n",
@@ -870,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 44,
    "id": "4fecc40d",
    "metadata": {},
    "outputs": [
@@ -878,26 +879,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "사진 PET_025_7913_1.jpg는 PET로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
-      "사진 PE_093_905_1.jpg는 PE로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "사진 PS_041_5423_2.jpg는 PS로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 19ms/step\n",
-      "사진 PS_041_5497_2.jpg는 PS로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "사진 PET_027_2332_2.jpg는 PET로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "사진 PET_026_656_1.jpg는 PET로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "사진 PE_099_329_2.jpg는 PE로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "사진 PE_092_4403_0.jpg는 PE로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "사진 PE_092_4304_1.jpg는 PE로 추정됩니다.\n",
-      "1/1 [==============================] - 0s 34ms/step\n",
-      "사진 PS_041_1242_1.jpg는 PS로 추정됩니다.\n"
+      "1/1 [==============================] - 0s 68ms/step\n",
+      "사진 PET_025_221_2.jpg는 PET로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "사진 PET_026_494_2.jpg는 PET로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 83ms/step\n",
+      "사진 PS_041_5461_2.jpg는 PS로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 78ms/step\n",
+      "사진 PS_041_5498_1.jpg는 PS로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 75ms/step\n",
+      "사진 PS_040_7417_0.jpg는 PS로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 68ms/step\n",
+      "사진 PE_096_3747_1.jpg는 PE로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 66ms/step\n",
+      "사진 PE_088_54_1.jpg는 PE로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 73ms/step\n",
+      "사진 PET_025_205_1.jpg는 PET로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 72ms/step\n",
+      "사진 PE_096_3812_0.jpg는 PE로 추정됩니다.\n",
+      "1/1 [==============================] - 0s 70ms/step\n",
+      "사진 PS_041_1332_2.jpg는 PS로 추정됩니다.\n"
      ]
     }
    ],
@@ -906,14 +907,14 @@
     "    random_img = Image.open(total_files[sample])\n",
     "    random_img = random_img.convert(\"RGB\")\n",
     "    random_img = random_img.resize((64, 64))\n",
-    "    data = np.asarray(random_img)\n",
-    "    data = data.reshape(1, 64, 64, 3)\n",
+    "    raw_data = np.asarray(random_img)\n",
+    "    data = raw_data.reshape(1, 64, 64, 3)\n",
     "    pred_class = model.predict(data)\n",
     "    pred_class = pred_class.argmax()\n",
     "\n",
     "    class_str = categories[pred_class][0]\n",
-    "    print(\"사진 \" + total_files[sample].split(\"\\\\\")[1] + \"는 \" + class_str + \"로 추정됩니다.\")\n",
-    "    image = Image.open(total_files[sample])\n",
+    "    print(\"사진 \" + total_files[sample].split(\"\\\\\")[1] + \"는 \" + class_str + \"로 추정됩니다.\")    \n",
+    "    image = Image.fromarray(raw_data)\n",
     "    image.show()"
    ]
   },
